# cli-2fa

./: .gitignore  Cargo.toml  go.mod  go.sum  keyring.go  main.go  storage.go  todo.md  totp.go
cmd/: add.go  code.go  list.go  root.go  version.go
internal/keyring/: keyring.go
internal/secret/: secret.go
internal/storage/: storage.go
internal/totp/: totp.go
pkg/keyring/: keyring.go
pkg/secret/: secret.go
pkg/storage/: storage.go
pkg/totp/: totp.go
rust-impl/src/: keyring.rs  main.rs
src/: chatgpt.rs  keyring.rs  main.rs  secret.rs  storage.rs  totp.rs  ui.rs
