[package]
name = "cli-2fa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2fa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
data-encoding = "2.3.3"
dialoguer = "0.10.2"
hmac = "0.12.1"
indicatif = "0.17.2"
sha1 = "0.10.5"
termcolor = "1.1.3"

[dev-dependencies]
chrono = "0.4.23"
